# libYolov5

./: CMakeLists.txt  README.md
include/: AverageHash.h  YoloV5.h
src/: AverageHash.cpp  CMakeLists.txt  YoloV5.cpp
test/: CMakeLists.txt  best.pt  coco.txt  freezeDetecter.cpp  test.cpp
